--- a/build.gradle
+++ b/build.gradle
@@ -56,12 +56,19 @@ minecraft {
         }
     }
 }
+repositories {
+    maven {
+        url "file:///${project.projectDir}/mcmodsrepo"}
+    maven{url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'}
 
+}
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2854'
+
+    implementation fg.deobf('software.bernie.geckolib:forge-1.12.2-geckolib:3.0.21')
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
@@ -110,9 +117,7 @@ publishing {
             artifact jar
         }
     }
-    repositories {
-        maven {
-            url "file:///${project.projectDir}/mcmodsrepo"
-        }
-    }
+
+
+
 }
